Thu Sep 26 05:42:33 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_gnuwin32_common.GNU:
          Since mingw can now handle exceptions across dll boundries
          removed that restriction. Thanks for Vince Mounts <vince@mounts.cc>
          for reporting this.

Wed Sep 25 17:58:43 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Stats.h:
        * ace/Connector.h:
        * ace/INET_Addr.h:
        * ace/OS.h:
        * ace/OS.i:
        * ace/Service_Config.h:
        * ace/Stats.h:
        * ace/Timer_Queue_T.cpp:
        * ace/TLI_Connector.cpp:
        * ace/XTI_ATM_Mcast.i:
        * ace/RMCast/RMCast_Reliable_Factory.h:
          Small fixes in method argument names, types, comments to fix doxygen
          warnings and improve the generated documentation.

Wed Sep 25 08:44:13 2002  Ossama Othman  <ossama@uci.edu>

	* tests/Notify_Performance_Test.cpp:

	  Do not explicitly instantiate an ACE_Atomic_Op<ACE_Thread_Mutex,
	  long> template if ACE_HAS_BUILTIN_ATOMIC_OP is defined.
	  Defining it causes template specialization with the same
	  parameters to be declared.  Fixes a compile-time problem in
	  explicit template instantiation builds.

Wed Sep 25 14:49:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Extended the types of files that are tested in the doxygen
          @file with the files_idl. Some of the idl files are parsed to
          generate doxygen documentation and when then a @file tag
          exists the filename must be correct.

Tue Sep 24 20:17:50 UTC 2002  Don Hinton  <dhinton@objectsciences.com>

        * tests/Process_Manager_Test.cpp:  Removed the ACE_HAS_THREADS
          requirement and the unneeded call to
          ACE_Reactor::instance ()->owner () so that it would run cleanly
          on single threaded builds.  Thanks to Steve Huston for this
          suggestion.
