@@ -1,3 +1,8 @@
+Thu Sep 26 09:18:55 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Logging_Strategy.h:
+          Improved doxygen documentation.
+
 Thu Sep 26 05:42:33 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/platform_gnuwin32_common.GNU:
